black: 99 per line

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,10 +58,13 @@ plots =
   matplotlib >= 3.1
 
 [flake8]
-max-line-length = 132
+max-line-length = 100
 exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,subprojects/
 per-file-ignores =
     __init__.py:F401
+ignore =
+  W503
+  E203
 
 [mypy]
 ignore_missing_imports = True
