2dew_* interim rename

--- a/src/gemini3d/tests/url.ini
+++ b/src/gemini3d/tests/url.ini
@@ -1,8 +1,8 @@
-[2d_fang]
+[2dew_fang]
 url = https://zenodo.org/record/3710463/files/test2d_fang.zip?download=1
 md5 = a93ef557e2cbfc444e2a443ecdec4a65
 
-[2d_glow]
+[2dew_glow]
 url = https://zenodo.org/record/3710463/files/test2d_glow.zip?download=1
 md5 = e9fcce2344a816894156131466042b37
 
