test_potential2d: fix linking of MUMPS with MPI

--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -18,14 +18,16 @@ if(NOT hdf5)
   return()
 endif()
 
-if(MINGW)
-  message(VERBOSE "this test doesn't work with MS-MPI")
-  return()
-endif()
-
 set(_potential_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 add_executable(test_potential2d test_potential2D.f90)
-target_link_libraries(test_potential2d PRIVATE const PDEelliptic MPI::MPI_Fortran h5fortran)
+target_link_libraries(test_potential2d const PDEelliptic h5fortran
+ ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
+ # ${MUMPS_LIBRARIES} MPI::MPI_Fortran is necessary here to get MPI after MUMPS,
+ # else will not compile on MinGW with Ninja or Make.
+ # LINK_INTERFACE_MULTIPLICITY and IMPORTED_LINK_INTERFACE_MULTIPLICITY do not help here.
+ # adding INTERFACE to Mumps project didn't help either
+ # nor did adding them in cmake/mumps.cmake
+ # it seems to have to be right here.
 add_test(NAME unit:potential2 COMMAND $<TARGET_FILE:test_potential2d>
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 set_tests_properties(unit:potential2 PROPERTIES TIMEOUT 30
