job.py => gemini_run entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,6 @@ scripts =
   scripts/compare_all.py
   scripts/plotall.py
   scripts/model_setup.py
-  job.py
 install_requires =
   numpy >= 1.16.0
   scipy
@@ -43,6 +42,10 @@ package_dir=
 
 [options.packages.find]
 where=src
+
+[options.entry_points]
+console_scripts =
+  gemini_run = gemini3d.__main__:gemini_run
 
 [options.extras_require]
 tests =
