gemini_prereqs entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ where=src
 [options.entry_points]
 console_scripts =
   gemini_run = gemini3d.__main__:gemini_run
+  gemini_prereqs = gemini3d.compile_prereqs:main
 
 [options.extras_require]
 tests =
