gemini_compare entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,6 @@ packages=find:
 python_requires = >= 3.6
 zip_safe = False
 scripts =
-  scripts/compare_all.py
   scripts/plotall.py
   scripts/model_setup.py
 install_requires =
@@ -45,6 +44,7 @@ where=src
 
 [options.entry_points]
 console_scripts =
+  gemini_compare = gemini3d.__main__:compare_run
   gemini_run = gemini3d.__main__:gemini_run
   gemini_prereqs = gemini3d.compile_prereqs:main
 
