gemini_setup entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,6 @@ python_requires = >= 3.6
 zip_safe = False
 scripts =
   scripts/plotall.py
-  scripts/model_setup.py
 install_requires =
   numpy >= 1.16.0
   scipy
@@ -46,6 +45,7 @@ where=src
 console_scripts =
   gemini_compare = gemini3d.__main__:compare_run
   gemini_run = gemini3d.__main__:gemini_run
+  gemini_setup = gemini3d.__main__:gemini_setup
   gemini_prereqs = gemini3d.compile_prereqs:main
 
 [options.extras_require]
