gemini_plot entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,6 @@ long_description_content_type = text/markdown
 packages=find:
 python_requires = >= 3.6
 zip_safe = False
-scripts =
-  scripts/plotall.py
 install_requires =
   numpy >= 1.16.0
   scipy
@@ -44,6 +42,7 @@ where=src
 [options.entry_points]
 console_scripts =
   gemini_compare = gemini3d.__main__:compare_run
+  gemini_plot = gemini3d.vis:gemini_plot
   gemini_run = gemini3d.__main__:gemini_run
   gemini_setup = gemini3d.__main__:gemini_setup
   gemini_prereqs = gemini3d.compile_prereqs:main
