--- a/src/numerical/grid/CMakeLists.txt
+++ b/src/numerical/grid/CMakeLists.txt
@@ -6,7 +6,7 @@ if(NOT MPI_OK)
   return()
 endif()
 
-add_library(grid OBJECT grid.f90 read.f90
+add_library(grid OBJECT grid.f90 read.f90 check.f90
 readgrid_hdf5.f90 readgrid_nc4.f90 readgrid_raw.f90)
 target_compile_options(grid PRIVATE ${gcc10opts})
  # PUBLIC necessary for ifort, even with MPI target
