--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,13 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "default build type")
 endif()
 
+if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.18)
+  cmake_policy(SET CMP0107 NEW)
+  cmake_policy(SET CMP0108 NEW)
+endif()
+if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.17)
+  cmake_policy(SET CMP0099 NEW)
+endif()
 if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.15)
   cmake_policy(SET CMP0094 NEW)
 endif()
