--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_library(PDEparabolic OBJECT PDEparabolic.f90)
-target_link_libraries(PDEparabolic PRIVATE const gbsv ${LAPACK_LIBRARIES})
-target_include_directories(PDEparabolic PRIVATE ${LAPACK_INCLUDE_DIRS})
+target_link_libraries(PDEparabolic PRIVATE const gbsv LAPACK::LAPACK)
 
 add_library(diffusion OBJECT diffusion.f90)
 target_link_libraries(diffusion PRIVATE const grid mesh PDEparabolic)
@@ -16,7 +15,7 @@ set(_tmpdifffn ${CMAKE_CURRENT_BINARY_DIR}/test_diffusion1d.h5)
 add_executable(test_diffusion1d test_diffusion1D.f90)
 # lapack needed for MacOS
 target_link_libraries(test_diffusion1d PRIVATE PDEparabolic gbsv const
-  ${LAPACK_LIBRARIES} h5fortran::h5fortran)
+  LAPACK::LAPACK h5fortran::h5fortran)
 
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
 add_test(NAME unit:diffusion1 COMMAND $<TARGET_FILE:test_diffusion1d>
