--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -27,7 +27,7 @@ FIXTURES_SETUP scalapack_fixture)
 
 # --- MUMPS
 add_executable(test_mumps test_mumps.f90)
-target_link_libraries(test_mumps mumps_interface MPI::MPI_Fortran)
+target_link_libraries(test_mumps mumps_interface SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
 
 add_test(NAME unit:mumps_basic
 COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
