--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ add_executable(gemini.bin gemini.f90)
 target_link_libraries(gemini.bin PRIVATE mpimod io neutral precipBCs
   temporal multifluid
   potentialBCs potential_comm_mumps const)
+target_link_libraries(gemini.bin PRIVATE LAPACK::LAPACK)
 #  MPI::MPI_Fortran)
 target_compile_options(gemini.bin PRIVATE ${FFLAGS})
 
