--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -21,6 +21,17 @@ jobs:
     - run: brew install pkg-config ninja lapack open-mpi hdf5 scalapack
 
 # CI is too slow for 3d_glow
+
+    - run: ctest -S setup.cmake -R unit -V
+      env:
+        FC: gfortran-9
+        CC: gcc-9
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: MacOS_CMake_Unit_log
+        path: build/CMakeFiles/CMakeError.log
+
     - run: ctest -S setup.cmake -E 3d -VV
       env:
         FC: gfortran-9
