use fixtures instead of depends to avoid spurious errors

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -38,4 +38,5 @@ TIMEOUT 15
 PROCESSORS 2
 SKIP_RETURN_CODE 77
 RUN_SERIAL true
-FIXTURES_REQUIRED scalapack_fixture)
+FIXTURES_REQUIRED scalapack_fixture
+FIXTURES_SETUP mumps_fixture)
