cmake: change no_mpi to mpi variable name

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -23,12 +23,12 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         update: true
-        install: 'git mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja mingw-w64-x86_64-gcc-fortran mingw-w64-x86_64-hdf5'
+        install: 'git mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja mingw-w64-x86_64-gcc-fortran mingw-w64-x86_64-hdf5 mingw-w64-x86_64-lapack'
 
     - uses: actions/checkout@v2
 
     - name: configure without MPI
-      run: cmake -B build -Dno_mpi:BOOL=true
+      run: cmake -B build -Dmpi:BOOL=false
 
     # - run: ctest -S setup.cmake -VV # avoids missing environment variable weird bugs
     - run: cmake --build build
