--- a/src/temporal/CMakeLists.txt
+++ b/src/temporal/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(test_sza test_sza.f90)
 target_link_libraries(test_sza PRIVATE timeutils const)
 add_test(NAME unit:SolarZenithAngle COMMAND $<TARGET_FILE:test_sza>)
 
-if(MPI_OK)
-  add_library(temporal OBJECT temporal.f90)
-  target_link_libraries(temporal PRIVATE config const mesh mpimod MPI::MPI_Fortran)
-endif(MPI_OK)
+if(mpi)
+add_library(temporal OBJECT temporal.f90)
+target_link_libraries(temporal PRIVATE config const mesh mpimod MPI::MPI_Fortran)
+endif(mpi)
