mumps link private vs public

--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -2,16 +2,16 @@
 # this is needed because Mumps uses Fortran 95 syntax instead of Fortran 2003 syntax
 configure_file(mumps_ifc.in.f90 mumps_ifc.f90)
 add_library(mumps_interface OBJECT ${CMAKE_CURRENT_BINARY_DIR}/mumps_ifc.f90)
-target_link_libraries(mumps_interface PUBLIC MUMPS::MUMPS)
+target_link_libraries(mumps_interface PRIVATE MUMPS::MUMPS)
 
 add_library(PDEelliptic OBJECT PDEelliptic.f90 elliptic2d.f90 elliptic3d.f90)
-target_link_libraries(PDEelliptic PUBLIC const mpimod mumps_interface MPI::MPI_Fortran)
+target_link_libraries(PDEelliptic PRIVATE const mpimod mumps_interface MPI::MPI_Fortran)
 
 add_library(potential OBJECT
 potential_comm_mumps.f90 potential_root.f90 potential_worker.f90
 potential_mumps.f90 potential2d.f90
 boundary_conditions/potentialBCs_mumps.f90)
-target_link_libraries(potential PUBLIC calculus collision const grid mesh interp timeutils PDEelliptic mpimod reader MPI::MPI_Fortran)
+target_link_libraries(potential PRIVATE calculus collision const grid mesh interp timeutils PDEelliptic mpimod reader MPI::MPI_Fortran)
 
 if(NOT hdf5)
   return()
