--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -10,6 +10,11 @@ add_library(mpimod OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/mpimod.f90
   mpisend.f90 mpirecv.f90 mpihalo.f90)
 target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
+if(NOT mpi)
+  # the reason for this is the MPI-1 Fortran 77 linking in MUMPS
+  # this seemed to be the easiest way to avoid symbol clases
+  target_link_libraries(mpimod PRIVATE mumps::mpiseq)
+endif()
 
 add_executable(test_excess_mpi test_excess_mpi.f90)
 target_link_libraries(test_excess_mpi mpimod)
