ci: add macos no_mpi

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -40,13 +40,17 @@ jobs:
     - name: Install packages
       run: |
         sudo apt update -yq
-        sudo apt install -yq --no-install-recommends gfortran libhdf5-dev liblapack-dev
+        sudo apt install -yq --no-install-recommends gfortran ninja-build libhdf5-dev liblapack-dev
 
     - name: configure without MPI
-      run: cmake -B build -Dmpi:BOOL=false
+      run: cmake -B build -Dmpi:BOOL=false -G Ninja
 
     - name: build and test without MPI
-      run: ctest -S setup.cmake -VV
+      run: ctest -S setup.cmake -R unit -VV
+
+    - name: 2D test without MPI
+      run: ctest -R 2dew_fang -V
+      working-directory: build
 
 
   cmakeBuildAllLibs:
