--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -18,9 +18,11 @@ else()
   target_sources(pathlib PRIVATE pathlib_unix.f90)
 endif()
 
+if(${PROJECT_NAME}_BUILD_TESTING)
 add_executable(test_pathlib test_pathlib.f90)
 target_link_libraries(test_pathlib pathlib)
 add_test(NAME unit:pathlib COMMAND $<TARGET_FILE:test_pathlib>)
+endif()
 
 # --- config
 add_library(config OBJECT config.f90 config_nml.f90 config_ini.f90)
@@ -28,6 +30,7 @@ target_link_libraries(config PRIVATE pathlib const)
 
 set(_test_file ${CMAKE_CURRENT_SOURCE_DIR}/../unit_tests/config/config_example.nml)
 
+if(${PROJECT_NAME}_BUILD_TESTING)
 add_executable(test_namelist test_nml.f90)
 add_test(NAME unit:namelist COMMAND $<TARGET_FILE:test_namelist> ${_test_file})
 set_tests_properties(unit:namelist PROPERTIES
@@ -38,6 +41,7 @@ add_executable(test_compiler_vendor test_compiler_vendor.f90)
 target_link_libraries(test_compiler_vendor config pathlib)
 add_test(NAME unit:compiler_vendor COMMAND $<TARGET_FILE:test_compiler_vendor>)
 set_tests_properties(unit:compiler_vendor PROPERTIES PASS_REGULAR_EXPRESSION ${CMAKE_Fortran_COMPILER_ID})
+endif()
 
 # --- io
 add_library(io OBJECT io.f90 output.f90
@@ -54,8 +58,8 @@ target_link_libraries(io PRIVATE calculus config const reader grid mpimod sanity
 add_library(reader OBJECT reader.f90 reader_hdf5.f90 reader_ncdf.f90 reader_raw.f90)
 target_link_libraries(reader PRIVATE const pathlib h5fortran::h5fortran nc4fortran::nc4fortran)
 
-if(netcdf)
+if(netcdf AND ${PROJECT_NAME}_BUILD_TESTING)
   add_executable(test_simsize_nc4 test_simsize_nc4.f90)
   target_link_libraries(test_simsize_nc4 nc4fortran::nc4fortran)
   # add_test(NAME unit:simsize_nc4 COMMAND test_simsize_nc4)
-endif(netcdf)
+endif()
