--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -4,6 +4,8 @@ target_link_libraries(fang PRIVATE const)
 add_library(fang_run OBJECT fang_run.f90)
 target_link_libraries(fang_run PRIVATE fang msis const)
 
+if(${PROJECT_NAME}_BUILD_TESTING)
+
 add_executable(test_fang test_fang.f90)
 target_link_libraries(test_fang PRIVATE fang fang_run const msis)
 
@@ -12,6 +14,8 @@ if(python_ok)
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_fang.py $<TARGET_FILE:test_fang>)
   set_tests_properties(unit:fangIonize PROPERTIES TIMEOUT 30)
 endif(python_ok)
+
+endif(${PROJECT_NAME}_BUILD_TESTING)
 
 if(glow)
   include(${PROJECT_SOURCE_DIR}/cmake/glow.cmake)
