--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -16,7 +16,11 @@ if(NOT mpi)
   target_link_libraries(mpimod PRIVATE MUMPS::mpiseq)
 endif()
 
+if(${PROJECT_NAME}_BUILD_TESTING)
+
 add_executable(test_excess_mpi test_excess_mpi.f90)
 target_link_libraries(test_excess_mpi mpimod)
 add_test(NAME unit:mpi:excessCPU COMMAND test_excess_mpi)
 set_tests_properties(unit:mpi:excessCPU PROPERTIES TIMEOUT 10)
+
+endif()
